[metadata]
name = pecryptfs
version = 0.1.0
license = GPLv3+
author = "Ingo Ruhnke"
author_email = "grumbel@gmail.com"
url = https://gitlab.com/pecryptfs/pecryptfs
description="Portable Userspace eCryptfs"
long_description="pecryptfs is a simple and somewhat incomplete Python \
  reimplementation of the eCryptfs filesystem encryption. Unlike \
  eCryptfs, which is a Linux kernel module, pecryptfs runs completely in \
  userspace and works on individual files via command line tools."

[options]
packages = find:

[options.entry_points]
console_scripts =
  pecryptfs-decrypt = pecryptfs.cmd_decrypt:main
  pecryptfs-filename = pecryptfs.cmd_filename:main
  pecryptfs-genfile = pecryptfs.cmd_genfile:main
  pecryptfs-makesig = pecryptfs.cmd_makesig:pip_main
  pecryptfs-ls = pecryptfs.cmd_ls:main

[flake8]
max-line-length = 120

[mypy]
strict = True
check_untyped_defs = True
disallow_untyped_defs = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
ignore_missing_imports = True

# must be False, see https://github.com/python/mypy/issues/10757
disallow_untyped_calls = False

# Can't use this due to mypy/pyright having different ideas about cast()
warn_redundant_casts = False

[mypy-pecryptfs.*]
ignore_missing_imports = False

[mypy-tests.*]
ignore_missing_imports = False

[pylint]
extension-pkg-whitelist = PyQt5
disable =
  broad-except,
  consider-using-f-string,
  consider-using-in,
  duplicate-code,
  fixme,
  import-outside-toplevel,
  invalid-name,
  logging-format-interpolation,
  logging-fstring-interpolation,
  missing-class-docstring,
  missing-function-docstring,
  missing-module-docstring,
  no-else-return,
  no-self-use,
  protected-access,
  superfluous-parens,
  too-few-public-methods,
  too-many-arguments,
  too-many-branches,
  too-many-instance-attributes,
  too-many-locals,
  too-many-public-methods,
  too-many-return-statements,
  too-many-statements,
  unnecessary-lambda,
  unspecified-encoding,
  unused-argument,
  unused-variable,
  using-constant-test,
  too-many-nested-blocks,
  use-implicit-booleaness-not-comparison,
  consider-using-from-import,
  useless-super-delegation,
  consider-iterating-dictionary,

[pylint.FORMAT]
max-line-length = 120

# EOF #
